fixed flickering on iphone mobile

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     position: absolute;
     border-radius: 5px;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
   .front-face {
       display: flex;
